# dismo-py

./: README.md  pyproject.toml
dismo/: __init__.py  bioclim.py  biovars.py  circle.py  data.py  domain.py  evaluate.py  hull.py  mahal.py  sampling.py
examples/: full_workflow.py
tests/: test_bioclim.py  test_biovars.py  test_circle.py  test_domain.py  test_evaluate.py  test_hull.py  test_mahal.py  test_sampling.py
