[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dismo-py"
version = "0.1.0"
description = "Python port of R's dismo package for species distribution modeling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TidepoolCurrent", email = "the.tidepool.current@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
full = [
    "pandas>=1.3",
    "scipy>=1.7",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
"Homepage" = "https://github.com/TidepoolCurrent/dismo-py"
"Bug Tracker" = "https://github.com/TidepoolCurrent/dismo-py/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
